fix a typo in image link

--- a/Array_LinkedList_SkipList/00.Array_LinkedList_SkipList.md
+++ b/Array_LinkedList_SkipList/00.Array_LinkedList_SkipList.md
@@ -34,7 +34,7 @@ SkipList improve lookup performance of LinkedList.
 
 Idea: Space-time/time-memory trade off. Add levels of indices to on top of LinkedList.
 
-![Skip List](.\image\Skip_list.gif)
+![Skip List](image/Skip_list.gif)
 
 Well known Application -> Redis
 
